fix: flicker during theme toggle

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,13 @@
     scrollbar-width: thin;
   }
 
+  html.disable-transitions,
+  html.disable-transitions *,
+  html.disable-transitions *::before,
+  html.disable-transitions *::after {
+    transition: none !important;
+  }
+
   body {
     @apply antialiased;
   }
